:bug: Fix scrolling issue on mobile

--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -14,24 +14,34 @@
 }
 
 div.body {
+  height: 100vh;
+
   main {
-    height: 100vh;
+    height: calc(100vh - 1.34rem - 4rem);
     margin: 0px auto;
     max-width: var(--application-width);
+    padding: 0.67rem 0px;
+    overflow: scroll;
+
+    article:not(:first-of-type) {
+      margin-block-start: 0.67rem;
+    }
 
     h1 {
       color: #1e407c;
+      font-size: 2rem;
       font-family: 'HyperlegibleNext', 'Montserrat', serif;
       font-weight: 300;
+      margin-block: 0px 0.67rem;
     }
 
     p {
+      display: inline-block;
       font-family: 'HyperlegibleNext', 'Roboto', sans-serif;
     }
 
     .icon {
       color: var(--primary);
-      height: 17.5px;
     }
 
     .lorcana-logo {
